[package]
name = "rust-youtube-dl"
version = "0.1.0"
authors = ["Sean Moon <smoon@freshbooks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
regex = "1.4.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures-util = "0.3.8"
json = "0.12.4"